--- a/test.JS/test.html
+++ b/test.JS/test.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>max</title>
-    <script src="group.js"></script>
+    <script src="sort.js"></script>
   </head>
   <body>
     
